--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "gsap": "^3.12.7",
+    "imagekitio-react": "^4.2.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
