--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
     "imagekitio-react": "^4.2.0",
     "lucide-react": "^0.474.0",
