--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "three": "^0.172.0",
+    "timeago.js": "^4.0.2",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.1"
   },
